--- a/Century21Portal-master/Web/mojoPortal.Web.csproj
+++ b/Century21Portal-master/Web/mojoPortal.Web.csproj
@@ -2106,12 +2106,122 @@
     <Content Include="Data\Sites\1\skins\Theme_C21\fbstyle.css" />
     <Content Include="Data\Sites\1\skins\Theme_C21\home.html" />
     <Content Include="Data\Sites\1\skins\Theme_C21\how-to-video.html" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\10dd4.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\813958-large.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\813958.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\ajax-loader.gif" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\asc.gif" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\bg.gif" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\blockbullets.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\book_icon_28x36-large.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\book_icon_28x36.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\C21_New_mockup.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\C21_University_LOGO.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\C21_University_LOGO12.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\Calander.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\Calander12.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\commentsicon_Blue.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\commentsicon_Gray.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\desc.gif" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\detail.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\detials.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\dialog_close2.ico" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\downSort.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\edit.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\error-img.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\error.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\Eventsicon_Gray.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\Events_icon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\facebook.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\facebook12.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\fav_folder.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\fav_folderOld.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\fav_icon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\fav_iconOld.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\fav_icon_default.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\footerbullets.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\footerfacebookicon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\footerrssicon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\footertexture.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\footertwittericon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\footer_facebook.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\footer_facebook1.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\footer_linkedin.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\footer_tweter.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\footer_youtube.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\header.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\inactive.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\info.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\likeicon_blue.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\likeicon_Gray.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\linkedinicon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\loading.gif" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\loading_spinner.gif" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\loading_spinner1.gif" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\login_dropdown.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\logo-2.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\logo.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\menuseparator.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\nav.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\news-1.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\news-2.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\news-3.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\news.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\news12.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\News_icon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\no-avatar.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\object0.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\object678033816.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\page.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\pageglare.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\picons35-large.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\picons35.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\picons36-large.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\picons36.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\picons50-large.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\picons50.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\pinteresticon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\postauthoricon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\postbullets.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\postdateicon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\postediticon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\postemailicon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\postpdficon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\postprinticon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\postquote.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\preloader-01.gif" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\RecentlyAdded.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\RecentlyAddedOld.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\searchicon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\shutterstock_32050237-large.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\shutterstock_32050237.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\shutterstock_3248515-large.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\shutterstock_3248515.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\shutterstock_40367920-large.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\shutterstock_40367920.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\Social_icon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\Social_icon_Gray.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\spacer.gif" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\sprite.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\tab_arrow.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\template_preview.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\TheLearning_icon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\TopViewed.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\TopViewedOld.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\tumblricon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\upSort.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\video-2-large.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\video-2.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\video-large.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\video.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\video_icon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\video_icon_29x36-large.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\video_icon_29x36.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\views.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\view_icon.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\vimeoicon.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\warning.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\youtubeicon.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\index.html" />
     <Content Include="Data\Sites\1\skins\Theme_C21\jquery.js" />
     <Content Include="Data\Sites\1\skins\Theme_C21\jquery.mCustomScrollbar.concat.min.js" />
@@ -5534,6 +5644,7 @@
     <Content Include="Data\Sites\1\skins\Theme_C21\style.css.bak" />
     <Content Include="Data\Sites\1\skins\Theme_C21\theme.skin" />
     <Content Include="Data\Sites\1\skins\Theme_C21\untitled.artx" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\Thumbs.db" />
     <None Include="Scripts\jquery-1.9.0.intellisense.js" />
     <Content Include="Scripts\jquery-1.9.0.js" />
     <Content Include="Scripts\jquery-1.9.0.min.js" />
