--- a/Century21Portal-master/Web/Web.config
+++ b/Century21Portal-master/Web/Web.config
@@ -575,7 +575,7 @@
     <add key="CombineCSS" value="true" />
     <!-- MinifyCSS Only Applies when server caching of CSS is also enabled, the minifying process is a little expensive so we don't want to do it on every request -->
     <add key="MinifyCSS" value="true" />
-    <add key="CacheCssOnServer" value="true" />
+    <add key="CacheCssOnServer" value="false" />
     <add key="CacheCssInBrowser" value="true" />
     <add key="UseGoogleCDN" value="true" />
     <!-- although this is named as google you could change the base path to use the Microsoft CDN instead -->
