--- a/Century21Portal-master/Web/mojoPortal.Web.csproj
+++ b/Century21Portal-master/Web/mojoPortal.Web.csproj
@@ -2166,6 +2166,7 @@
     <Content Include="Data\Sites\1\skins\Theme_C21\images\loading_spinner1.gif" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\login_dropdown.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\logo-2.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\logo-seal-2.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\logo.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\menuseparator.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\nav.png" />
