--- a/Century21Portal-master/Web/mojoPortal.Web.csproj
+++ b/Century21Portal-master/Web/mojoPortal.Web.csproj
@@ -2378,6 +2378,8 @@
     <Content Include="Data\Sites\1\skins\Theme_C21\images\blockbullets.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\book_icon_28x36-large.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\book_icon_28x36.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\Browse_courses.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\C21_Logo.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\C21_New_mockup.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\C21_University_LOGO.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\C21_University_LOGO12.png" />
@@ -2385,6 +2387,7 @@
     <Content Include="Data\Sites\1\skins\Theme_C21\images\Calander12.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\commentsicon_Blue.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\commentsicon_Gray.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\Course_schedule.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\delete.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\desc.gif" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\detail.png" />
@@ -2415,8 +2418,10 @@
     <Content Include="Data\Sites\1\skins\Theme_C21\images\footer_tweter.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\footer_youtube.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\header.jpg" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\How_to_video.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\inactive.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\info.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\Learning_resources.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\likeicon_blue.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\likeicon_Gray.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\linkedinicon.png" />
@@ -2429,6 +2434,7 @@
     <Content Include="Data\Sites\1\skins\Theme_C21\images\logo.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\menuseparator.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\nav.png" />
+    <Content Include="Data\Sites\1\skins\Theme_C21\images\Nav_pattern.png" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\news-1.jpg" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\news-2.jpg" />
     <Content Include="Data\Sites\1\skins\Theme_C21\images\news-3.jpg" />
